--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -1,7 +1,21 @@
 .contactContainer {
-  gap: 20px;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto 1fr;
+}
+
+@media screen and (min-width: 1024px) {
+  .contactContainer {
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .contactText {
+    order: 2;
+  }
+
+  .contactForm {
+    order: 1;
+  }
 }
 
 .contactFormButton {
