fix styling in background, video, addressing landing page flash

--- a/src/app/Header/Header.module.css
+++ b/src/app/Header/Header.module.css
@@ -1,7 +1,21 @@
 .header {
   grid-column: span 3;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: none;
   justify-items: center;
+}
+
+.header img {
+  height: 100px;
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .header img {
+    height: auto;
+  }
 }
 
 .headerText {
