--- a/src/app/NavBar/NavBar.module.css
+++ b/src/app/NavBar/NavBar.module.css
@@ -21,7 +21,7 @@
 .navBar {
   @apply animate-moveBackgroundDown;
   background-attachment: fixed;
-  background-image: url('/images/bubbles.png');
+  background-image: url('https://res.cloudinary.com/dmfnrbrly/image/upload/v1694711264/colter%20harris%20site/bubbles_eyf6sr.png');
   border: 10px outset #9198e5;
   display: flex;
   flex-direction: column;
@@ -52,7 +52,6 @@
   .links {
     flex-direction: column;
     justify-content: center;
-    margin-top: 10rem;
   }
 
   .navBar {
