fix broken navbar, comment out unused portfolio code

--- a/src/app/NavBar/NavBar.module.css
+++ b/src/app/NavBar/NavBar.module.css
@@ -12,7 +12,7 @@
 .navBar {
   @apply animate-moveBackgroundDown;
   border-style: outset;
-  background-image: url('https://res.cloudinary.com/dmfnrbrly/image/upload/v1694711264/colter%20harris%20site/bubbles\_eyf6sr.png');
+  background-image: url('https://res.cloudinary.com/dmfnrbrly/image/upload/v1694711264/colter%20harris%20site/bubbles_eyf6sr.png');
 
 }
 
